hal/include/HAL/Digital.h

  double getCounterPeriod(void* counter_pointer, int32_t *status);
  void setCounterMaxPeriod(void* counter_pointer, double maxPeriod, int32_t *status);
  void setCounterUpdateWhenEmpty(void* counter_pointer, bool enabled, int32_t *status);
  bool getCounterStopped(void* counter_pointer, int32_t *status);
  bool getCounterDirection(void* counter_pointer, int32_t *status);
  void setCounterReverseDirection(void* counter_pointer, bool reverseDirection, int32_t *status);
  void* initializeEncoder(uint8_t port_a_module, uint32_t port_a_pin, bool port_a_analog_trigger,
						  uint8_t port_b_module, uint32_t port_b_pin, bool port_b_analog_trigger,
						  bool reverseDirection, int32_t *index, int32_t *status); // TODO: fix routing
  void freeEncoder(void* encoder_pointer, int32_t *status);
  void startEncoder(void* encoder_pointer, int32_t *status);
  void stopEncoder(void* encoder_pointer, int32_t *status);
  void resetEncoder(void* encoder_pointer, int32_t *status);
  int32_t getEncoder(void* encoder_pointer, int32_t *status); // Raw value
  double getEncoderPeriod(void* encoder_pointer, int32_t *status);
  void setEncoderMaxPeriod(void* encoder_pointer, double maxPeriod, int32_t *status);
  bool getEncoderStopped(void* encoder_pointer, int32_t *status);