wpilibj/wpilibJava/src/main/java/edu/wpi/first/wpilibj/hal/HALLibrary.java

	/**
	 * Original signature : <code>double getCounterPeriod(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:65</i><br>
	 * @deprecated use the safer methods {@link #getCounterPeriod(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getCounterPeriod(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native double getCounterPeriod(Pointer counter_pointer, IntByReference status);
	/**
	 * Original signature : <code>double getCounterPeriod(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:65</i>
	 */
	public static native double getCounterPeriod(Pointer counter_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void setCounterMaxPeriod(void*, double, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:66</i><br>
	 * @deprecated use the safer methods {@link #setCounterMaxPeriod(com.sun.jna.Pointer, double, java.nio.IntBuffer)} and {@link #setCounterMaxPeriod(com.sun.jna.Pointer, double, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setCounterMaxPeriod(Pointer counter_pointer, double maxPeriod, IntByReference status);
	/**
	 * Original signature : <code>void setCounterMaxPeriod(void*, double, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:66</i>
	 */
	public static native void setCounterMaxPeriod(Pointer counter_pointer, double maxPeriod, IntBuffer status);
	/**
	 * Original signature : <code>void setCounterUpdateWhenEmpty(void*, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:67</i><br>
	 * @deprecated use the safer methods {@link #setCounterUpdateWhenEmpty(com.sun.jna.Pointer, byte, java.nio.IntBuffer)} and {@link #setCounterUpdateWhenEmpty(com.sun.jna.Pointer, byte, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setCounterUpdateWhenEmpty(Pointer counter_pointer, byte enabled, IntByReference status);
	/**
	 * Original signature : <code>void setCounterUpdateWhenEmpty(void*, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:67</i>
	 */
	public static native void setCounterUpdateWhenEmpty(Pointer counter_pointer, byte enabled, IntBuffer status);
	/**
	 * Original signature : <code>bool getCounterStopped(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:68</i><br>
	 * @deprecated use the safer methods {@link #getCounterStopped(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getCounterStopped(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native byte getCounterStopped(Pointer counter_pointer, IntByReference status);
	/**
	 * Original signature : <code>bool getCounterStopped(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:68</i>
	 */
	public static native byte getCounterStopped(Pointer counter_pointer, IntBuffer status);
	/**
	 * Original signature : <code>bool getCounterDirection(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:69</i><br>
	 * @deprecated use the safer methods {@link #getCounterDirection(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getCounterDirection(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native byte getCounterDirection(Pointer counter_pointer, IntByReference status);
	/**
	 * Original signature : <code>bool getCounterDirection(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:69</i>
	 */
	public static native byte getCounterDirection(Pointer counter_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void setCounterReverseDirection(void*, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:70</i><br>
	 * @deprecated use the safer methods {@link #setCounterReverseDirection(com.sun.jna.Pointer, byte, java.nio.IntBuffer)} and {@link #setCounterReverseDirection(com.sun.jna.Pointer, byte, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setCounterReverseDirection(Pointer counter_pointer, byte reverseDirection, IntByReference status);
	/**
	 * Original signature : <code>void setCounterReverseDirection(void*, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:70</i>
	 */
	public static native void setCounterReverseDirection(Pointer counter_pointer, byte reverseDirection, IntBuffer status);
	/**
	 * Original signature : <code>void* initializeEncoder(uint8_t, uint32_t, bool, uint8_t, uint32_t, bool, bool, int32_t*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:72</i><br>
	 * @deprecated use the safer methods {@link #initializeEncoder(byte, int, byte, byte, int, byte, byte, java.nio.IntBuffer, java.nio.IntBuffer)} and {@link #initializeEncoder(byte, int, byte, byte, int, byte, byte, com.sun.jna.ptr.IntByReference, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native Pointer initializeEncoder(byte port_a_module, int port_a_pin, byte port_a_analog_trigger, byte port_b_module, int port_b_pin, byte port_b_analog_trigger, byte reverseDirection, IntByReference index, IntByReference status);
	/**
	 * Original signature : <code>void* initializeEncoder(uint8_t, uint32_t, bool, uint8_t, uint32_t, bool, bool, int32_t*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:72</i>
	 */
	public static native Pointer initializeEncoder(byte port_a_module, int port_a_pin, byte port_a_analog_trigger, byte port_b_module, int port_b_pin, byte port_b_analog_trigger, byte reverseDirection, IntBuffer index, IntBuffer status);
	/**
	 * Original signature : <code>void freeEncoder(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:75</i><br>
	 * @deprecated use the safer methods {@link #freeEncoder(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #freeEncoder(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void freeEncoder(Pointer encoder_pointer, IntByReference status);
	/**
	 * Original signature : <code>void freeEncoder(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:75</i>
	 */
	public static native void freeEncoder(Pointer encoder_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void startEncoder(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:76</i><br>
	 * @deprecated use the safer methods {@link #startEncoder(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #startEncoder(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void startEncoder(Pointer encoder_pointer, IntByReference status);
	/**
	 * Original signature : <code>void startEncoder(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:76</i>
	 */
	public static native void startEncoder(Pointer encoder_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void stopEncoder(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:77</i><br>
	 * @deprecated use the safer methods {@link #stopEncoder(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #stopEncoder(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void stopEncoder(Pointer encoder_pointer, IntByReference status);
	/**
	 * Original signature : <code>void stopEncoder(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:77</i>
	 */
	public static native void stopEncoder(Pointer encoder_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void resetEncoder(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:78</i><br>
	 * @deprecated use the safer methods {@link #resetEncoder(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #resetEncoder(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void resetEncoder(Pointer encoder_pointer, IntByReference status);
	/**
	 * Original signature : <code>void resetEncoder(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:78</i>
	 */
	public static native void resetEncoder(Pointer encoder_pointer, IntBuffer status);
	/**
	 * Raw value<br>
	 * Original signature : <code>int32_t getEncoder(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:79</i><br>
	 * @deprecated use the safer methods {@link #getEncoder(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getEncoder(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native int getEncoder(Pointer encoder_pointer, IntByReference status);
	/**
	 * Raw value<br>
	 * Original signature : <code>int32_t getEncoder(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:79</i>
	 */
	public static native int getEncoder(Pointer encoder_pointer, IntBuffer status);
	/**
	 * Original signature : <code>double getEncoderPeriod(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:80</i><br>
	 * @deprecated use the safer methods {@link #getEncoderPeriod(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getEncoderPeriod(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native double getEncoderPeriod(Pointer encoder_pointer, IntByReference status);
	/**
	 * Original signature : <code>double getEncoderPeriod(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:80</i>
	 */
	public static native double getEncoderPeriod(Pointer encoder_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void setEncoderMaxPeriod(void*, double, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:81</i><br>
	 * @deprecated use the safer methods {@link #setEncoderMaxPeriod(com.sun.jna.Pointer, double, java.nio.IntBuffer)} and {@link #setEncoderMaxPeriod(com.sun.jna.Pointer, double, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setEncoderMaxPeriod(Pointer encoder_pointer, double maxPeriod, IntByReference status);
	/**
	 * Original signature : <code>void setEncoderMaxPeriod(void*, double, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:81</i>
	 */
	public static native void setEncoderMaxPeriod(Pointer encoder_pointer, double maxPeriod, IntBuffer status);
	/**
	 * Original signature : <code>bool getEncoderStopped(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:82</i><br>
	 * @deprecated use the safer methods {@link #getEncoderStopped(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getEncoderStopped(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native byte getEncoderStopped(Pointer encoder_pointer, IntByReference status);
	/**
	 * Original signature : <code>bool getEncoderStopped(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:82</i>
	 */
	public static native byte getEncoderStopped(Pointer encoder_pointer, IntBuffer status);
